# secure-bootloader

./: .gitmodules  README.md
esp32_projects/esp32_ota_ble_bridge/: README.md
esp32_projects/esp32_ota_ble_bridge/src/: main.cpp
esp32_projects/esp32_ota_bt_bridge/: platformio.ini
esp32_projects/esp32_ota_bt_bridge/src/: main.cpp
stm32_ota/: ble_ota_host.py  bt_ota_host.py  bt_test.py
stm32_ota/firmware/: README.md  blinky.sig  ec_private.pem  ec_pub.der  ec_public.pem  pubkey_der.c  uart_print.sig  uart_print_slotb.sig
stm32_ota/integration_tests/: ota_host.py  test_secure_ota_ble.py
stm32_ota/integration_tests/test_firmware/: README.md  ec_priv.pem  ec_priv_bad.pem  ec_pub.pem  firmware_A.sig  firmware_A_diff_key.sig  firmware_A_slota_diff_key.sig  firmware_A_slotb.sig  firmware_B.sig  firmware_B_slota.sig  firmware_large.sig  firmware_large_slota.sig  firmware_large_slotb.sig  firmware_small.sig
stm32_ota/integration_tests/test_firmware/valid_firmware/: blinky_slota.sig
stm32_projects/: .gitignore
stm32_projects/cmake_test_proj/: CMakeLists.txt  README.md  stm32f767z.ld
stm32_projects/cmake_test_proj/include/: led_control.h  utils.h
stm32_projects/cmake_test_proj/src/: led_control.c  main.c  utils.c
stm32_projects/secure_bootloader/: Makefile  README.md  stm32f767z.ld
stm32_projects/secure_bootloader/include/: bootloader.h  flash.h  ota.h  uart.h
stm32_projects/secure_bootloader/lib/: MBEDTLS_BUILD_INSTRUCTIONS.md
stm32_projects/secure_bootloader/src/: bootloader.c  flash.c  main.c  ota.c  platform_zeroize.c  startup.c  syscalls.c  uart.c  utilities.c
stm32_projects/secure_bootloader_tls/: Makefile  README.md  stm32f767z.ld
stm32_projects/secure_bootloader_tls/include/: bootloader.h  flash.h  uart.h  utilities.h
stm32_projects/secure_bootloader_tls/lib/: MBEDTLS_BUILD_INSTRUCTIONS.md
stm32_projects/secure_bootloader_tls/src/: flash.c  main.c  ota.c  syscalls.c  uart.c
stm32_projects/simple_bootloader/: Makefile  README.md
stm32_projects/simple_bootloader/include/: bootloader.h
stm32_projects/simple_bootloader/src/: bootloader.c  main.c  uart.c
stm32_projects/simple_uart_serial/: Makefile  README.md  stm32f767z.ld
stm32_projects/simple_uart_serial/include/: uart.h
stm32_projects/simple_uart_serial/src/: main.c  uart.c
stm32_projects/test_proj/: Makefile  README.md  load.sh  main.c  startup.c  stm32f767z.ld
stm32_projects/uart_bridge/: Makefile  stm32f767z.ld
stm32_projects/uart_bridge/include/: uart.h
stm32_projects/uart_bridge/src/: main.c  startup.c  uart.c
